[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stata_svy"
version = "0.1.0"
description = "Reimplementación en Python de svyset/svy: (Stata) para diseños muestrales complejos, siguiendo las fórmulas del manual [SVY] Variance estimation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
]

[tool.setuptools]
packages = ["stata_svy"]
